// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bar Component should render correctly with 10px width 1`] = `
.c0 {
  position: relative;
  left: 0px;
  width: 10px;
  margin: 0;
  border-width: 0 0 3px;
  border-style: none none solid;
  border-color: rgb(0,108,174);
  -webkit-transition: border-color 0.6s ease-out 0s;
  transition: border-color 0.6s ease-out 0s;
}

<hr
  aria-hidden={true}
  className="c0"
  color="primary"
  width={10}
/>
`;

exports[`Bar Component should render correctly with 10px width and 5px posX 1`] = `
.c0 {
  position: relative;
  left: 5px;
  width: 10px;
  margin: 0;
  border-width: 0 0 3px;
  border-style: none none solid;
  border-color: rgb(0,108,174);
  -webkit-transition: all 0.6s ease-out 0s;
  transition: all 0.6s ease-out 0s;
}

<hr
  aria-hidden={true}
  className="c0"
  color="primary"
  width={10}
/>
`;

exports[`Bar Component should render correctly with zero width 1`] = `
.c0 {
  position: relative;
  left: 0px;
  width: 0px;
  margin: 0;
  border-width: 0 0 3px;
  border-style: none none solid;
  border-color: transparent;
  -webkit-transition: border-color 0.6s ease-out 0s;
  transition: border-color 0.6s ease-out 0s;
}

<hr
  aria-hidden={true}
  className="c0"
  color="primary"
  width={0}
/>
`;
